# Career-Score-Prediction

./: .gitignore  README.md  TRAINING_STRATEGY_PROMPT.md  UZMANLIK_ALANI_PROMPT.md  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  son_kaggle.ipynb
output/: test.parquet  train.parquet
